# skirmish

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  d3d11_renderer.cpp  d3d11_renderer.h  main.cpp  mat.cpp  mat.h  perlin.cpp  perlin.h  skirmish.h  test_math.cpp  tga.cpp  tga.h  vec.cpp  vec.h  win32.cpp  win32.h  win32_main_window.cpp  win32_main_window.h
data/: md3-ange.pk3  md3-ange.txt  md3-mario.pk3  md3-mario.txt  md3-thor.pk3  md3_thor.txt
skirmish/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  d3d11_renderer.cpp  skirmish.h  vec.cpp
src/skirmish/: CMakeLists.txt  d3d11_renderer.cpp  d3d11_renderer.h  perlin.h  tga.cpp  tga.h  win32_main_window.cpp
src/skirmish/math/: 3dmath.cpp  3dmath.h  CMakeLists.txt  constants.h  mat.h  types.h  vec.h
src/skirmish/md3/: CMakeLists.txt  md3.cpp  md3.h
src/skirmish/util/: CMakeLists.txt  array_view.cpp  array_view.h  deflate_stream.cpp  deflate_stream.h  file_stream.cpp  file_stream.h  file_system.cpp  file_system.h  path.cpp  path.h  perlin.cpp  stream.cpp  stream.h  text.cpp  text.h  tga.cpp  zip.cpp  zip.h  zip_internals.cpp  zip_internals.h
src/skirmish/win32/: CMakeLists.txt  d3d11_renderer.cpp  d3d11_renderer.h  q3_player_render_obj.cpp  q3_player_render_obj.h  win32_main_window.cpp
test/: CMakeLists.txt
test/math/: CMakeLists.txt  matvecio.h  test_3dmath.cpp  test_math.cpp
test/util/: CMakeLists.txt  test_array_view.cpp  test_deflate_stream.cpp  test_fs.cpp  test_path.cpp  test_stream.cpp  test_text.cpp  test_zip.cpp
